@@ -15,6 +15,8 @@ Release 1.0 (in development)
 
 * Added ``tab-width`` option to ``literalinclude`` directive.
 
+* Added ``rst_prolog`` config value.
+
 * Added ``html_secnumber_suffix`` config value to control section
   numbering format.
 
